[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-risk"
version = "0.1.0"
description = "LIQ Stack: position sizing and risk management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Latent Infinity Solutions" }]
dependencies = [
    "liq-core>=0.1.0",
    "liq-signals>=0.1.0",
    "pydantic>=2.10",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[tool.uv]
[tool.uv.sources]
liq-core = { path = "../liq-core", editable = true }
liq-signals = { path = "../liq-signals", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"


[tool.ty.environment]
extra-paths = [
    "./src",
    "../liq-core/src",
    "../liq-signals/src",
]

[tool.ty.rules]

[tool.pytest.ini_options]
addopts = "--cov=liq.risk --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
filterwarnings = [
    # Ignore expected RiskConfig validation warnings during tests
    "ignore:max_position_pct.*exceeds max_gross_leverage:UserWarning",
]
